--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,6 @@ body{
 
 .bg_body{
     align-items: center;
-    background-color: antiquewhite;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
